[package]
name = "lang_ast"
version = "0.1.0"
edition = "2021"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "game server for Rust"
repository = "https://github.com/tickbh/lang_ast"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["ast"]


[dependencies]
regex = "1.7.1"